crates/backyard-lexer/tests/snapshots/comment__doc_param_type_41.snap
---
source: crates/backyard-lexer/tests/comment.rs
expression: tokens
snapshot_kind: text
---
- token_type: CommentDocOpen
  value:
    - 47
    - 42
    - 42
  line: 1
  column: 0
  offset: 0
- token_type: DocTagParam
  value:
    - 64
    - 112
    - 97
    - 114
    - 97
    - 109
  line: 1
  column: 4
  offset: 4
- token_type: Type
  value:
    - 97
    - 114
    - 114
    - 97
    - 121
  line: 1
  column: 11
  offset: 11
- token_type: LeftCurlyBracket
  value:
    - 123
  line: 1
  column: 16
  offset: 16
- token_type: UnqualifiedName
  value:
    - 97
  line: 1
  column: 17
  offset: 17
- token_type: Colon
  value:
    - 58
  line: 1
  column: 18
  offset: 18
- token_type: Type
  value:
    - 105
    - 110
    - 116
  line: 1
  column: 20
  offset: 20
- token_type: Comma
  value:
    - 44
  line: 1
  column: 23
  offset: 23
- token_type: UnqualifiedName
  value:
    - 98
  line: 1
  column: 25
  offset: 25
- token_type: Colon
  value:
    - 58
  line: 1
  column: 26
  offset: 26
- token_type: Type
  value:
    - 97
    - 114
    - 114
    - 97
    - 121
  line: 1
  column: 28
  offset: 28
- token_type: LeftCurlyBracket
  value:
    - 123
  line: 1
  column: 33
  offset: 33
- token_type: UnqualifiedName
  value:
    - 99
  line: 1
  column: 34
  offset: 34
- token_type: Colon
  value:
    - 58
  line: 1
  column: 35
  offset: 35
- token_type: Type
  value:
    - 99
    - 97
    - 108
    - 108
    - 97
    - 98
    - 108
    - 101
  line: 1
  column: 37
  offset: 37
- token_type: LeftParenthesis
  value:
    - 40
  line: 1
  column: 45
  offset: 45
- token_type: RightParenthesis
  value:
    - 41
  line: 1
  column: 46
  offset: 46
- token_type: Colon
  value:
    - 58
  line: 1
  column: 47
  offset: 47
- token_type: Type
  value:
    - 105
    - 110
    - 116
  line: 1
  column: 49
  offset: 49
- token_type: RightCurlyBracket
  value:
    - 125
  line: 1
  column: 52
  offset: 52
- token_type: RightCurlyBracket
  value:
    - 125
  line: 1
  column: 53
  offset: 53
- token_type: Variable
  value:
    - 36
    - 102
    - 111
    - 111
  line: 1
  column: 55
  offset: 55
- token_type: CommentDocClose
  value:
    - 42
    - 47
  line: 1
  column: 60
  offset: 60
