crates/backyard-lexer/tests/snapshots/comment__doc_param_type_5.snap
---
source: crates/backyard-lexer/tests/comment.rs
expression: tokens
snapshot_kind: text
---
- token_type: CommentDocOpen
  value:
    - 47
    - 42
    - 42
  line: 1
  column: 0
  offset: 0
- token_type: DocTagParam
  value:
    - 64
    - 112
    - 97
    - 114
    - 97
    - 109
  line: 1
  column: 4
  offset: 4
- token_type: FullyQualifiedName
  value:
    - 92
    - 92
    - 70
    - 111
    - 111
    - 92
    - 66
    - 97
    - 114
    - 92
    - 92
    - 66
    - 97
    - 122
  line: 1
  column: 11
  offset: 11
- token_type: Variable
  value:
    - 36
    - 102
    - 111
    - 111
  line: 1
  column: 26
  offset: 26
- token_type: CommentDocClose
  value:
    - 42
    - 47
  line: 1
  column: 31
  offset: 31
