crates/backyard-lexer/tests/snapshots/comment__line.snap
---
source: crates/backyard-lexer/tests/comment.rs
assertion_line: 6
expression: tokens
snapshot_kind: text
---
- token_type: CommentLine
  value: " test"
  line: 1
  column: 0
  offset: 0
