crates/backyard-lexer/tests/snapshots/comment__line_new_line.snap
---
source: crates/backyard-lexer/tests/comment.rs
assertion_line: 12
expression: tokens
snapshot_kind: text
---
- token_type: CommentLine
  value: " test"
  line: 1
  column: 0
  offset: 0
- token_type: Variable
  value: a
  line: 2
  column: 0
  offset: 8
